Configure vs code type checking for qt bindings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,9 @@ ignore-decorators = [
   "property",
   "setter",
 ]
+
+[tool.pyright.defineConstant]
+PYQT5 = true
+PYSIDE2 = false
+PYQT6 = false
+PYSIDE6 = false
